test: reescrever AgendamentoServiceTest com cobertura completa
Testes unitários abrangentes para AgendamentoService usando JUnit 5,
Mockito e AssertJ. Cobertura de todos os métodos públicos do service:

- criar(): 7 testes (sucesso, conflito de horário, entidades inexistentes,
  cálculo de dataHoraFim, overlap de profissional)
- buscarPorId(): 3 testes (sucesso, ID inexistente)
- listarTodos(): 3 testes (lista com resultados, lista vazia, item único)
- atualizar(): 10 testes (sucesso, imutabilidade CONCLUIDO/CANCELADO,
  conflito na atualização, entidades inexistentes, exclusão do próprio ID)
- atualizarStatus(): 10 testes (4 transições válidas, 6 transições proibidas)
- cancelar(): 6 testes (sucesso AGENDADO/CONFIRMADO, bloqueio
  CONCLUIDO/CANCELADO, ID inexistente, verificação de persistência)

Inclui helper methods: criarAgendamentoValido(), criarAgendamentoInvalido(),
criarMocksPadrao(), criarAgendamentoConflitante()

https://claude.ai/code/session_01CkvhYebwg4KSTt3EYY6tWJ